# Qt-Toolbar-Editor-With-Plugin

./: CMakeLists.txt  README  toolbar_editor.pri
demo/: demo.pro  main.cpp  test_window.cpp  test_window.hpp
designer_plugin/: config_widget_plugin_collection.cpp  config_widget_plugin_collection.hpp  toolbar_editor_plugin.cpp  toolbar_editor_plugin.hpp
src/: toolbar_editor.cpp  toolbar_editor.hpp
